--- a/css/ogi-md-autocentar-e4dc53.webflow.css
+++ b/css/ogi-md-autocentar-e4dc53.webflow.css
@@ -2126,11 +2126,39 @@
   }
 
   .hero-section {
-    height: auto;
+    height: 100vh;
   }
 
   .hero-section-container {
     margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 335px) {
+  .h1 {
+    font-size: 24px;
+  }
+
+  .white-text {
+    font-size: 16px;
+  }
+
+  .cta-button-menu.big-button {
+    padding: 2px 8px;
+  }
+
+  .button-link {
+    padding: 8px 16px;
+    font-size: 22px;
+    line-height: 32px;
+  }
+
+  .hero-section {
+    height: 100vh;
+  }
+
+  .hero-section-container {
+    margin-bottom: 120px;
   }
 }
 
