--- a/css/ogi-md-autocentar-e4dc53.webflow.css
+++ b/css/ogi-md-autocentar-e4dc53.webflow.css
@@ -2125,6 +2125,10 @@
     font-size: 18px;
   }
 
+  .hero-section-container {
+    height: 100vh;
+  }
+
   .hero-section {
     height: 100vh;
   }
@@ -2151,6 +2155,10 @@
     padding: 8px 16px;
     font-size: 22px;
     line-height: 32px;
+  }
+
+  .hero-section-container {
+    height: 100vh;
   }
 
   .hero-section {
